Bug 415510 - "terminal Options" dropdown in KOpenWith should hide when both options are hidden too
Summary: "terminal Options" dropdown in KOpenWith should hide when both options are hi...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-12-24 00:43 UTC by bluescreenavenger
Modified: 2020-01-13 12:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of KOpenWith (55.39 KB, image/png)
2019-12-24 00:43 UTC, bluescreenavenger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2019-12-24 00:43:09 UTC
Created attachment 124681 [details]
Screenshot of KOpenWith

SUMMARY


STEPS TO REPRODUCE
This is how I call a KOpenWith dialog right now, a patch to kde-cli-tool
setting
+      dlg.hideNoCloseOnExit();
+      dlg.hideRunInTerminal();


OBSERVED RESULT
Note the "Terminal Options" dropdown still shows "Terminal Options" even though it is empty. I could not figure out a way to hide it

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Kai Uwe Broulik 2020-01-13 12:05:56 UTC
Git commit 1e7a62c98f8a879ecc04f7e92cd2cdcbb2f0bf73 by Kai Uwe Broulik.
Committed on 13/01/2020 at 12:05.
Pushed by broulik into branch 'master'.

[KOpenWithDialog] Hide collapsible group box when all options inside are hidden

Differential Revision: https://phabricator.kde.org/D26492

M  +4    -1    src/widgets/kopenwithdialog.cpp

https://commits.kde.org/kio/1e7a62c98f8a879ecc04f7e92cd2cdcbb2f0bf73