[KOpenWithDialog] Hide collapsible group box when all options inside are hidden

BUG: 415510

Differential Revision: https://phabricator.kde.org/D26492